--- a/Melsweb.css
+++ b/Melsweb.css
@@ -34,8 +34,13 @@ a[data-fancybox="gallery"] img,
     width: 100%;
     height: 100%;
     border-radius: 10px;
+    background:rgb(255, 235, 215);
 }
 
+h2 {
+  grid-column: span 12 ;
+  color:rgb(131, 107, 80);
+}
 nav {
   grid-column: span 4;  
   display: flex; /* Added */
@@ -69,6 +74,8 @@ svg {
 
 main {
   grid-column: span 6;
+  color: rgb(131, 107, 80); 
+  line-height: 2;
 }
 
 section img {
@@ -98,14 +105,27 @@ nav ul li a:hover {
 #myCarousel {
   margin-bottom: 24px;
   grid-column: span 6;
+  background:rgb(255, 235, 215);
 }
 
 #myCarousel .f-carousel__slide {
   text-align: center;
   padding: 24px;
-  background: #eee;
+  padding-top: 0;
+  background:rgb(255, 235, 215);
 }
 
+.photos{ 
+  height: 700px;
+}
+
+main iframe {
+  border-radius: 10px; 
+}
+
+main video {
+  border-radius: 10px; 
+}
 
 
 
